k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dndfourplayer-svc
spec:
  selector:
    app: dndfourplayer
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
